--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -13,6 +13,9 @@
     -fx-background-radius: 30 0 0 30;
 }
 
+.button5 {
+
+}
 .button2 {
     -fx-background-color: #393351;
     -fx-background-radius: 20;
